compiler/tests/fa/errors/noret_ret_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
بی‌بازگشت تابع بمیر():
    بازگشت
پایان

تابع اصلی:
    بمیر()
پایان
